--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -153,13 +153,13 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #21409A;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #007bff;
+  color: #21409A;
   text-decoration: underline;
 }
 
